============
Five Changes
============

HEAD
====

Five 1.5.9 (2009-01-01)
=======================

* Forward-ported viewlet manager directive fix (see c69896).
* fixed retrieval of the If-Modified-Since header in browser/resource.py

Five 1.5.8 (2008-07-13)
=======================

* LP #245649: fixes clashes with zope. and zope.app namespace
  packages

Five 1.5.6 (2007-09-29)
=======================

* Fixed breakage caused by backport of #2358 to Zope 2.10 branch.
  This change requires Zope 2.10.5 or higher.

Five 1.5.5 (2007-06-25)
=======================

* Five.browser.metaconfigure.page didn't protect names from interface
  superclasses. (http://www.zope.org/Collectors/Zope/2333)

Five 1.5.4 (2007-06-23)
=======================

* Add support for delayed initialization of packages-as-products. This is
  to avoid problems with missing ZODB connections during the ZCML processing
  phase.

Five 1.5.3 (svn/unreleased)
===========================

* ObjectCopiedEvent was not dispatched to sublocations.
  (http://www.zope.org/Collectors/Zope/2307)

* Relaxed requirements for context of browser.pagetemplatefile's 
  ZopeTwoPageTemplateFile, to reduce barriers for testing renderability
  of views which use them. (http://www.zope.org/Collectors/Zope/2327)

* Added change to registerPackage directive so that it stores the newly
  registered packages on the Products package object for faster reference.
  This means code that looks this up (ie Zope2's FactoryDispatcher) no longer
  has to open a zodb connection each time.

Five 1.5.2 (2007-01-10)
=======================

* Added support for the <securityPolicy /> ZCML directive known from
  Zope 3.

* View methods which aren't explicitly declared as allowed must be marked
  private explicitly to avoid being web publishable.

* i18n: Synced FiveTranslationService implementation with Zope 3.3. This makes
  sure that the TestMessageFallbackDomain is used if registered.
